Content Layout 25% Complete - Left side inprogress

--- a/main.html
+++ b/main.html
@@ -34,6 +34,26 @@
 
             <section id="Section_content">
                 <div class="content">
+                    <div class="content_grid">
+
+                        <div id="content_gridL" style="background-color: azure;">
+                            <div id="gridL_top">
+
+                            </div>
+
+                            <div id="gridL_bottom">
+
+                            </div>
+                        </div>
+
+                        <div id="content_gridC" style="background-color: gray;">
+
+                        </div>
+
+                        <div id="content_gridR" style="background-color: azure;">
+
+                        </div>
+                    </div>
                     
                 </div>
             </section>
