Content Layout 25% complete - center in progress

--- a/main.html
+++ b/main.html
@@ -47,6 +47,9 @@
                         </div>
 
                         <div id="content_gridC" style="background-color: gray;">
+                            <div id="gridC_main" style="background-color: thistle;"> 
+
+                            </div>
 
                         </div>
 
