Content Layout 25% - Todo left side

--- a/main.html
+++ b/main.html
@@ -38,7 +38,17 @@
 
                         <div id="content_gridL" style="background-color: azure;">
                             <div id="gridL_top">
+                                <div id="gridL_top_title" style="flex-grow: 1;">
+                                    <h2>Season1: War</h2>
+                                </div>
 
+                                <div id="gridL_top_mid" style="flex-grow: 8;">
+
+                                </div>
+
+                                <div id="gridL_top_progress" style="flex-grow: 1;">
+
+                                </div>
                             </div>
 
                             <div id="gridL_bottom">
@@ -48,6 +58,7 @@
 
                         <div id="content_gridC" style="background-color: gray;">
                             <div id="gridC_main" style="background-color: thistle;"> 
+                                <img id="mainactor" src="\images\FIVER 3.PNG" alt="">
 
                             </div>
 
