right side layout 25% completed

--- a/main.html
+++ b/main.html
@@ -35,7 +35,6 @@
             <section id="Section_content">
                 <div class="content">
                     <div class="content_grid">
-                       
 
                         <div id="content_gridL">
                             <div id="gridL_top">
@@ -95,7 +94,10 @@
                         </div>
 
                         <div id="content_gridR">
-
+                            <div id="gridR_main">
+                                <img id="thumbnail_img" src="/images/Thumbnail.jpg">
+                            </div>
+                            <div id="thumbnail_description">Battlepass Purchased!</div>
                         </div>
                     </div>
                     
